kubernetes/applications/blues/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blues-web
  namespace: blues
spec:
  selector:
    app: blues-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
